<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/black"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="8dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <TableRow>

            <TextView
                android:id="@+id/SrNo_tv"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sr_no"
                android:textColor="@color/black"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/BlockFlat_tv"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="2"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/block_flat"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/date_time_tv"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_column="3"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/date_time"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/payName_tv"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="4"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/patType_tv"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_column="5"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/payment_type"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/payAmt_tv"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_column="6"
                android:background="@drawable/cell_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>