<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/PaidBy"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/paidby"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PayeeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/payeedetails"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/PaidBy"
        app:layout_constraintTop_toBottomOf="@+id/PaidBy" />

    <TextView
        android:id="@+id/PaymentReason"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/payment_reason"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/PaidBy"
        app:layout_constraintStart_toEndOf="@+id/PaidBy"
        app:layout_constraintTop_toTopOf="@+id/PaidBy" />

    <TextView
        android:id="@+id/PaidAmount"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="16dp"
        android:text="@string/txn_amount"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/TxnDateTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TxnDateTime"
        app:layout_constraintTop_toTopOf="@+id/PaymentReason"
        app:layout_constraintVertical_bias="0.53999996" />

    <TextView
        android:id="@+id/TxnDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txn_date_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/PayeeDetails"
        app:layout_constraintEnd_toEndOf="@+id/PaymentReason"
        app:layout_constraintStart_toStartOf="@+id/PaymentReason"
        app:layout_constraintTop_toBottomOf="@+id/PaymentReason" />

    <View
        android:id="@+id/payVw"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxnDateTime" />
</androidx.constraintlayout.widget.ConstraintLayout>