<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PaymentPdfFragment">

    <Button
        android:id="@+id/DownloadPdfBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_pdf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayoutPdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sr_no"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/block_flat"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/date_time"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/payment_type"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PaymentsTableRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" />

            <TableRow
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="10sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="10sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TotalAmt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="6"
                    android:background="@drawable/cell_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/amount"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </TableRow>



        </TableLayout>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>